src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Addressee__c</fullName>
        <label>Addressee</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY() - Birthdate)/365)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Full_Name__c</fullName>
        <formula>hyperlink (&quot;/&quot; &amp;Id, LastName &amp; &quot;, &quot; &amp; FirstName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name_Dashboard__c</fullName>
        <formula>LastName &amp; &quot;, &quot; &amp; FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name - Dashboard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deceased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deceased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Head_Of_Household__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Head Of Household?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Household_Links__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N700000000oxk&amp;eid=&quot; &amp; Id, IMAGE( &quot;servlet/servlet.FileDownload?file=01570000000LVBi&quot;, &quot;image from Documents tab&quot;)) &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N700000000oxV&amp;eid=&quot;&amp;Id&amp;&quot;&amp;direction=toHousehold&quot;, IMAGE( &quot;servlet/servlet.FileDownload?file=01570000000LVBj&quot;, &quot;image from Documents tab&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Household Links</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <description>Reporter beat, specfic interests of contact</description>
        <label>Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map__c</fullName>
        <formula>hyperlink (&quot;/servlet/servlet.Integration?lid=00b70000000mQmi&amp;eid=&quot; &amp;Id, IMAGE( &quot;servlet/servlet.FileDownload?file=01570000000LVBl&quot;, &quot;image from Documents tab&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ONEN_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>ONEN_Household__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>R00N70000001ay0ZEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Philanthropic_Interests__c</fullName>
        <label>Philanthropic Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Arts, Culture, and Humanities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment and Animals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International, Foreign Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public, Societal Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religion Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual/Membership Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown, Unclassified</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Picture_Attachment_Id__c</fullName>
        <description>Stores the Id of the attachment that is used for the profile picture for this contact</description>
        <inlineHelpText>Stores the Id of the attachment that is used for the profile picture for this contact</inlineHelpText>
        <label>Picture Attachment Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Picture_Url__c</fullName>
        <description>URL for picture uploaded from a survey</description>
        <label>Picture Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <formula>IF( ISBLANK(Picture_Attachment_Id__c) || ISNULL(Picture_Attachment_Id__c), (IF(ISBLANK( Picture_Url__c ) || ISNULL( Picture_Url__c ), &quot;&quot;, IMAGE( Picture_Url__c, &quot;Profile Picture&quot;, 300, 300))), IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Picture_Attachment_Id__c ,&quot;Profile Picture&quot;, 300, 300))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <description>Signature URL</description>
        <label>Signature</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Spouse_Name__c</fullName>
        <label>Spouse Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Interests__c</fullName>
        <label>Volunteer Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Event support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Office Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Probono services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>gfsurveys__Age__c</fullName>
        <description>The age of the contact</description>
        <formula>IF(ISNULL(Birthdate),0,FLOOR((TODAY()-Birthdate)/365.2425))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gfsurveys__IsClient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gfsurveys__IsMobileUser__c</fullName>
        <description>Returns the number of Active Mobile User objects associated with this contact. The contact is considered to be a Mobile User if it has one (or more) related Mobile User objects.
In this context 0 means false, and 1 or more means true.</description>
        <label>Is Mobile User</label>
        <summaryForeignKey>gfsurveys__Mobile_User__c.gfsurveys__Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>gfsurveys__Mobile_User__c</fullName>
        <formula>IF( gfsurveys__IsMobileUser__c &gt; 0
,
IMAGE(&apos;/img/checkbox_checked.gif&apos;, &apos;Checked&apos;)
,
IMAGE(&apos;/img/checkbox_unchecked.gif&apos;, &apos;Not Checked&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile User Count</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gfsurveys__mobilesurveys_Id__c</fullName>
        <externalId>true</externalId>
        <label>Respondent ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gfsurveys__mobilesurveys_LastCheckInDate__c</fullName>
        <label>Last Check In Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>gfsurveys__mobilesurveys_LastCheckInDevice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>mobilesurveys Last Check In Device</label>
        <referenceTo>gfsurveys__Device__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gfsurveys__mobilesurveys_Password__c</fullName>
        <label>Surveyor Password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gfsurveys__mobilesurveys_Status__c</fullName>
        <label>Surveyor Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>gfsurveys__mobilesurveys_Username__c</fullName>
        <label>Surveyor Username</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Africa</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.DEPARTMENT</field>
            <operation>contains</operation>
            <value>Africa</value>
        </filters>
        <label>Africa</label>
    </listViews>
    <listViews>
        <fullName>Americas</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.DEPARTMENT</field>
            <operation>contains</operation>
            <value>Americas</value>
        </filters>
        <label>Americas</label>
    </listViews>
    <listViews>
        <fullName>Asia</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.DEPARTMENT</field>
            <operation>contains</operation>
            <value>Asia</value>
        </filters>
        <label>Asia</label>
    </listViews>
    <listViews>
        <fullName>Business</fullName>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE3</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.DEPARTMENT</field>
            <operation>contains</operation>
            <value>business</value>
        </filters>
        <label>Business</label>
    </listViews>
    <listViews>
        <fullName>Colombia_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>LAC</value>
        </filters>
        <label>Colombia Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>General</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.DEPARTMENT</field>
            <operation>equals</operation>
            <value>general</value>
        </filters>
        <label>General</label>
    </listViews>
    <listViews>
        <fullName>MENA</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.DEPARTMENT</field>
            <operation>equals</operation>
            <value>MENA</value>
        </filters>
        <label>MENA</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Philanthropy</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.DEPARTMENT</field>
            <operation>equals</operation>
            <value>philanthropy</value>
        </filters>
        <label>Philanthropy</label>
    </listViews>
    <listViews>
        <fullName>Technology</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.DEPARTMENT</field>
            <operation>contains</operation>
            <value>technology</value>
        </filters>
        <label>Technology</label>
    </listViews>
    <listViews>
        <fullName>Telecom</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.DEPARTMENT</field>
            <operation>equals</operation>
            <value>telecom</value>
        </filters>
        <label>Telecom</label>
    </listViews>
    <listViews>
        <fullName>USA</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTACT.DEPARTMENT</field>
            <operation>equals</operation>
            <value>USA</value>
        </filters>
        <label>USA</label>
    </listViews>
    <listViews>
        <fullName>gfsurveys__Surveyors</fullName>
        <columns>FULL_NAME</columns>
        <columns>gfsurveys__mobilesurveys_Username__c</columns>
        <columns>gfsurveys__mobilesurveys_Password__c</columns>
        <columns>gfsurveys__mobilesurveys_Status__c</columns>
        <columns>gfsurveys__mobilesurveys_LastCheckInDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>gfsurveys__mobilesurveys_Username__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Surveyors</label>
    </listViews>
    <namedFilters>
        <fullName>gfsurveys__nf_01IE0000000kHoZMAU_00NE0000004AO1bMAG</fullName>
        <active>false</active>
        <field>gfsurveys__Client_Assignation__c.gfsurveys__Client__c</field>
        <filterItems>
            <field>Contact.gfsurveys__IsClient__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Client Assignation_Client</name>
    </namedFilters>
</CustomObject>